fix: set bottom sheet z-index in preparation for top bar changes

--- a/app/component/map/map.scss
+++ b/app/component/map/map.scss
@@ -86,7 +86,7 @@ div.map {
       min-height: 50vh;
       background: white;
       position: relative;
-      z-index: index($zindex, mobile-drawer);
+      z-index: $mobile-drawer-content-zindex;
       .drag-line {
         width: 30px;
         height: 4px;
