--- a/sass/base/_zindex.scss
+++ b/sass/base/_zindex.scss
@@ -3,3 +3,4 @@ $zindex: base, map-container, footer, map-gradient, map-fullscreen-toggle,
   viapoint-input-5, viapoint-input-4, viapoint-input-3, viapoint-input-2,
   viapoint-input-1, origin-input, search-input-focus, search-input-icon, autosuggest-suggestion-container, front;
 $leaflet-overlay: 800;
+$mobile-drawer-content-zindex: 1000;
